--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -26247,7 +26247,7 @@
       </notes>
       <segment>
         <source>Du hast {item} gefunden, als du die schmutzigen Ecken dieses elenden Ortes durchsucht hast!</source>
-        <target>Du hast {item} gefunden, als du die schmutzigen Ecken dieses elenden Ortes durchsucht hast!</target>
+        <target>El temor te hace un nudo en las tripas mientras exploras esta ruina... Pero no habrá sido en vano porque acabas de encontrar algo: {item}</target>
       </segment>
     </unit>
     <unit id="GtMVIRi" name="Diese Aktion kannst du erst morgen erneut versuchen.">
