ES sandball after christmas

--- a/translations/items+intl-icu.es.xlf
+++ b/translations/items+intl-icu.es.xlf
@@ -9374,7 +9374,7 @@
       </notes>
       <segment>
         <source>Dir fällt kein Grund ein, dies zu tun...</source>
-        <target>Dir fällt kein Grund ein, dies zu tun...</target>
+        <target>No tienes razón para hacer eso...</target>
       </segment>
     </unit>
     <unit id="4Exhdnj" name="Dies kannst du erst ab &lt;strong&gt;Tag 2&lt;/strong&gt; tun.">
