ES event selection

--- a/translations/admin+intl-icu.es.xlf
+++ b/translations/admin+intl-icu.es.xlf
@@ -4511,7 +4511,7 @@
       </notes>
       <segment>
         <source>Stadt-Event</source>
-        <target>Stadt-Event</target>
+        <target>Evento del pueblo</target>
       </segment>
     </unit>
   </file>
